# scratch-cli

./: .clauderules  .gitignore  .gitlab-ci.yml  CLAUDE.md  IMPORT_SUGGESTIONS_FEATURE.md  MANUAL_INSTALL.md  PROJECT_STRUCTURE.md  README.md  TECHDEBT.md  TEST_COVERAGE.md  TEST_README.md  disabled-.gitlab-ci.yml  one-pager.md  package-lock.json  package.json  start-dev.sh  test-import.csv  testfile.txt  turbo.json
pydantic-ai-agent/: .cursorignore  .dockerignore  .env.example  .gitignore  CONNECTOR_BUILDER_SUMMARY.md  Dockerfile  README.md  __init__.py  agent.py  chat_controller.py  chat_server.py  chat_service.py  client-agent-msg-sequence.mermaid  compile_check.py  config.py  constants.py  env.example  eval1.py  example_connector_builder.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  scratchpad_api.py  session.py  setup_env.py  simple_chat.py  test_connector_builder.py  tools.py  websocket-communication.mermaid  websocket_handler.py
pydantic-ai-agent/_experiments/: README.md  agent_models.py  main (1).py  main.py  setup_env.py  test.py
pydantic-ai-agent/agent/: agent.py  models.py  tools.py
pydantic-ai-agent/chat-server/: .env.example  agent.py  chat_service.py  endpoints.py  logger.py  main.py  scratchpad_api.py
pydantic-ai-agent/connector_builder/: DTOs.py  README.md  __init__.py  agent.py  connector_builder_controller.py  connector_builder_history_processor.py  connector_builder_prompts.py  connector_builder_service.py  connector_builder_tools.py  connector_builder_utils.py  models.py
pydantic-ai-agent/experiments/: agent_models.py  (+1 more)
(+2041 files in other folders)
