[project]
name = "pydantic-ai-agent"
version = "0.1.0"
description = "Agent server bridging user, Scratch data, and LLMs"
requires-python = ">=3.14"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.0",
    "isort>=6.0.0",
    "jinja2>=3.1.0",
    "logfire>=4.3.0",
    "pydantic-ai==1.37.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.34.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
